--- a/2009/08/29/on_top_of_my_head_on_Shanghai.html.textile
+++ b/2009/08/29/on_top_of_my_head_on_Shanghai.html.textile
@@ -4,26 +4,29 @@
 <meta charset="UTF-8">
 <link rel="dns-prefetch" href="//use.typekit.net">
 <meta name="author" content="Li Sun" />
-<link rel="stylesheet" type="text/css" href="/css/main.css" media="all" />
+<link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
 <link rel="alternate" type="application/rss+xml" title="donie's notes" href="http://feeds.feedburner.com/donie_notes" />
 <link rel="icon" type="image/x-ico" href="/assets/favicon3.ico?42" />
 <link rel="shortcut icon" href="/assets/favicon3.ico?42" />
 <link rel="apple-touch-icon-precomposed" href="/assets/main-icon.png" >
-<title>donie's notes </title>
+<title>donie's notes | 新世界</title>
 </head>
 <body>
 <div id="wrapper">
 <div id="header"> <a href="/">donie's notes</a> </div>
 <div style="clear:both; border-bottom: 1px solid #ccc; width: 98%"></div>
 <div id="content">
+<article>
+<div class="entry-title">
+<h4> <a href="/2009/08/29/on_top_of_my_head_on_Shanghai.html"> 新世界 </a> </h4>
+出发前：我不禁的大喊：花花世界我来了！
+到了航站楼2和航站楼1之间的通道之间的时候，我不禁的感叹：真他娘的长啊！
+打的在南浦大桥上看到东方明珠时：这就是花花世界啊！
+到了张江客户那里，我不得不唏嘘：也没啥特别啊！
 
-<!-- pagenav -->
-<div class='alignleft'>
+<p class="meta">29 Aug 2009</p>
+</article>
 
-<div class='alignright'>
-<a href="/page">Newer entries→</a></div>
-<div style="clear:both"></div>
-<!-- /pagenav -->
 
 <div id="footer"><div id="credits">2015 © all rights reserved. layout inspired by <a href="http://jimbarraud.com/manifest/">manifest</a>. <br>
 best viewed over the <a href="http://goo.gl/bIWJw">wall</a>. &nbsp;&nbsp;&nbsp;<a href="/log.html">sitelog</a>|&nbsp;<a href="/archive.html">archive</a>|&nbsp;<a href="/about.html">about</a></div></div>
