--- a/2010/04/17/some_updates_Apr_18th_10.html.textile
+++ b/2010/04/17/some_updates_Apr_18th_10.html.textile
@@ -4,26 +4,31 @@
 <meta charset="UTF-8">
 <link rel="dns-prefetch" href="//use.typekit.net">
 <meta name="author" content="Li Sun" />
-<link rel="stylesheet" type="text/css" href="/css/main.css" media="all" />
+<link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
 <link rel="alternate" type="application/rss+xml" title="donie's notes" href="http://feeds.feedburner.com/donie_notes" />
 <link rel="icon" type="image/x-ico" href="/assets/favicon3.ico?42" />
 <link rel="shortcut icon" href="/assets/favicon3.ico?42" />
 <link rel="apple-touch-icon-precomposed" href="/assets/main-icon.png" >
-<title>donie's notes </title>
+<title>donie's notes | 凑字数</title>
 </head>
 <body>
 <div id="wrapper">
 <div id="header"> <a href="/">donie's notes</a> </div>
 <div style="clear:both; border-bottom: 1px solid #ccc; width: 98%"></div>
 <div id="content">
+<article>
+<div class="entry-title">
+<h4> <a href="/2010/04/17/some_updates_Apr_18th_10.html"> 凑字数 </a> </h4>
+厄，我想还是搬到 <a href="http://www.linode.com/index.cfm" rel="external"> _VPS_</a> 上来吧。
 
-<!-- pagenav -->
-<div class='alignleft'>
+买了 linode 的 VPS，觉得还是很不错的，hoho
+买了 flickr 的 pro 账户，下一步就是秒个相机了，LX3 或者 ZS7（??TZ10??），有点本末倒置了
+下一步在新的主题之上加上几个 form 吧，起码放个 link
+把从前的虚拟主机上的服务搬过来，嗯
 
-<div class='alignright'>
-<a href="/page">Newer entries→</a></div>
-<div style="clear:both"></div>
-<!-- /pagenav -->
+<p class="meta">17 Apr 2010</p>
+</article>
+
 
 <div id="footer"><div id="credits">2015 © all rights reserved. layout inspired by <a href="http://jimbarraud.com/manifest/">manifest</a>. <br>
 best viewed over the <a href="http://goo.gl/bIWJw">wall</a>. &nbsp;&nbsp;&nbsp;<a href="/log.html">sitelog</a>|&nbsp;<a href="/archive.html">archive</a>|&nbsp;<a href="/about.html">about</a></div></div>
