--- a/2010/07/12/no_title_2.html.textile
+++ b/2010/07/12/no_title_2.html.textile
@@ -4,26 +4,41 @@
 <meta charset="UTF-8">
 <link rel="dns-prefetch" href="//use.typekit.net">
 <meta name="author" content="Li Sun" />
-<link rel="stylesheet" type="text/css" href="/css/main.css" media="all" />
+<link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
 <link rel="alternate" type="application/rss+xml" title="donie's notes" href="http://feeds.feedburner.com/donie_notes" />
 <link rel="icon" type="image/x-ico" href="/assets/favicon3.ico?42" />
 <link rel="shortcut icon" href="/assets/favicon3.ico?42" />
 <link rel="apple-touch-icon-precomposed" href="/assets/main-icon.png" >
-<title>donie's notes </title>
+<title>donie's notes | 无题（二）</title>
 </head>
 <body>
 <div id="wrapper">
 <div id="header"> <a href="/">donie's notes</a> </div>
 <div style="clear:both; border-bottom: 1px solid #ccc; width: 98%"></div>
 <div id="content">
+<article>
+<div class="entry-title">
+<h4> <a href="/2010/07/12/no_title_2.html"> 无题（二） </a> </h4>
+搞了个 <a href="http://gandi.net" rel="external">gandi</a> 的证书：先用 openssl 生成 CSR 和 KEY 文件，然后将 CSR 发给 gandi 等待生成 CRT（用文本编辑器打开看看是否有内容，一般短时间内生成的 CRT 是无效的，密钥部分全是空的，我是睡了一觉起来，证书才准备好了）。
+然后 
 
-<!-- pagenav -->
-<div class='alignleft'>
+pre. $ cat host.key host.crt > host.pem
 
-<div class='alignright'>
-<a href="/page">Newer entries→</a></div>
-<div style="clear:both"></div>
-<!-- /pagenav -->
+lighty conf中加上如下内容，算vhost吧？
+
+pre. $SERVER["socket"] == "IP:443" {
+    ssl.engine = "enable"
+    ssl.pemfile = "/etc/lighttpd/ssl/fq.dn/host.pem"
+    ssl.ca-file = "/etc/lighttpd/ssl/fq.dn/host.crt"
+    server.name = "fq.dn"
+    server.document-root = "/var/www/fq.dn"
+}
+
+done，不过 firefox 竟然认不到 gandi 的证书，Safari/IE/Opera/Chrome 正常，是不是该去 Bugzilla 提去～
+
+<p class="meta">12 Jul 2010</p>
+</article>
+
 
 <div id="footer"><div id="credits">2015 © all rights reserved. layout inspired by <a href="http://jimbarraud.com/manifest/">manifest</a>. <br>
 best viewed over the <a href="http://goo.gl/bIWJw">wall</a>. &nbsp;&nbsp;&nbsp;<a href="/log.html">sitelog</a>|&nbsp;<a href="/archive.html">archive</a>|&nbsp;<a href="/about.html">about</a></div></div>
