--- a/2010/07/28/m_1.html.textile
+++ b/2010/07/28/m_1.html.textile
@@ -4,26 +4,28 @@
 <meta charset="UTF-8">
 <link rel="dns-prefetch" href="//use.typekit.net">
 <meta name="author" content="Li Sun" />
-<link rel="stylesheet" type="text/css" href="/css/main.css" media="all" />
+<link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
 <link rel="alternate" type="application/rss+xml" title="donie's notes" href="http://feeds.feedburner.com/donie_notes" />
 <link rel="icon" type="image/x-ico" href="/assets/favicon3.ico?42" />
 <link rel="shortcut icon" href="/assets/favicon3.ico?42" />
 <link rel="apple-touch-icon-precomposed" href="/assets/main-icon.png" >
-<title>donie's notes </title>
+<title>donie's notes | 马克</title>
 </head>
 <body>
 <div id="wrapper">
 <div id="header"> <a href="/">donie's notes</a> </div>
 <div style="clear:both; border-bottom: 1px solid #ccc; width: 98%"></div>
 <div id="content">
+<article>
+<div class="entry-title">
+<h4> <a href="/2010/07/28/m_1.html"> 马克 </a> </h4>
+虽然同是央视的，不过比起电影频道那什么电影报道里面滥用的谍影重重音乐，新闻频道要厚道多了，
 
-<!-- pagenav -->
-<div class='alignleft'>
+<a href="http://v.ku6.com/show/YHnXhTuIddwIzfyp.html" rel="external">http://v.ku6.com/show/YHnXhTuIddwIzfyp.html</a>
 
-<div class='alignright'>
-<a href="/page">Newer entries→</a></div>
-<div style="clear:both"></div>
-<!-- /pagenav -->
+<p class="meta">28 Jul 2010</p>
+</article>
+
 
 <div id="footer"><div id="credits">2015 © all rights reserved. layout inspired by <a href="http://jimbarraud.com/manifest/">manifest</a>. <br>
 best viewed over the <a href="http://goo.gl/bIWJw">wall</a>. &nbsp;&nbsp;&nbsp;<a href="/log.html">sitelog</a>|&nbsp;<a href="/archive.html">archive</a>|&nbsp;<a href="/about.html">about</a></div></div>
