--- a/2011/02/27/no_title_6.html.textile
+++ b/2011/02/27/no_title_6.html.textile
@@ -4,26 +4,30 @@
 <meta charset="UTF-8">
 <link rel="dns-prefetch" href="//use.typekit.net">
 <meta name="author" content="Li Sun" />
-<link rel="stylesheet" type="text/css" href="/css/main.css" media="all" />
+<link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
 <link rel="alternate" type="application/rss+xml" title="donie's notes" href="http://feeds.feedburner.com/donie_notes" />
 <link rel="icon" type="image/x-ico" href="/assets/favicon3.ico?42" />
 <link rel="shortcut icon" href="/assets/favicon3.ico?42" />
 <link rel="apple-touch-icon-precomposed" href="/assets/main-icon.png" >
-<title>donie's notes </title>
+<title>donie's notes | 无题（六）</title>
 </head>
 <body>
 <div id="wrapper">
 <div id="header"> <a href="/">donie's notes</a> </div>
 <div style="clear:both; border-bottom: 1px solid #ccc; width: 98%"></div>
 <div id="content">
+<article>
+<div class="entry-title">
+<h4> <a href="/2011/02/27/no_title_6.html"> 无题（六） </a> </h4>
+p. yyets 的<a href='ed2k://|file|%E5%A4%96%E5%8C%85%E5%85%AC%E5%8F%B8.Outsourced.S01E11.Chi_Eng.HDTVrip.720X396-YYeTs%E4%BA%BA%E4%BA%BA%E5%BD%B1%E8%A7%86.rmvb|124770743|E430E79ADD70C0A4A9B3EB0232CCBF0C|h=3GRVRYJ5DNJRFWXQ4SHXZO4R6Y2KZ3RT|/'>翻译</a>太出彩了，推荐。
 
-<!-- pagenav -->
-<div class='alignleft'>
+Yes! youtube blocked it! ↑↑↑ 
+-http://www.youtube.com/watch?v=hqKlpPjVA4I-
 
-<div class='alignright'>
-<a href="/page">Newer entries→</a></div>
-<div style="clear:both"></div>
-<!-- /pagenav -->
+
+<p class="meta">27 Feb 2011</p>
+</article>
+
 
 <div id="footer"><div id="credits">2015 © all rights reserved. layout inspired by <a href="http://jimbarraud.com/manifest/">manifest</a>. <br>
 best viewed over the <a href="http://goo.gl/bIWJw">wall</a>. &nbsp;&nbsp;&nbsp;<a href="/log.html">sitelog</a>|&nbsp;<a href="/archive.html">archive</a>|&nbsp;<a href="/about.html">about</a></div></div>
