--- a/2012/05/31/ohno.html.textile
+++ b/2012/05/31/ohno.html.textile
@@ -4,26 +4,27 @@
 <meta charset="UTF-8">
 <link rel="dns-prefetch" href="//use.typekit.net">
 <meta name="author" content="Li Sun" />
-<link rel="stylesheet" type="text/css" href="/css/main.css" media="all" />
+<link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
 <link rel="alternate" type="application/rss+xml" title="donie's notes" href="http://feeds.feedburner.com/donie_notes" />
 <link rel="icon" type="image/x-ico" href="/assets/favicon3.ico?42" />
 <link rel="shortcut icon" href="/assets/favicon3.ico?42" />
 <link rel="apple-touch-icon-precomposed" href="/assets/main-icon.png" >
-<title>donie's notes </title>
+<title>donie's notes | 真的不想写点什么吗？</title>
 </head>
 <body>
 <div id="wrapper">
 <div id="header"> <a href="/">donie's notes</a> </div>
 <div style="clear:both; border-bottom: 1px solid #ccc; width: 98%"></div>
 <div id="content">
+<article>
+<div class="entry-title">
+<h4> <a href="/2012/05/31/ohno.html"> 真的不想写点什么吗？ </a> </h4>
+p. Ah...， 日子过的太废话了
 
-<!-- pagenav -->
-<div class='alignleft'>
 
-<div class='alignright'>
-<a href="/page">Newer entries→</a></div>
-<div style="clear:both"></div>
-<!-- /pagenav -->
+<p class="meta">31 May 2012</p>
+</article>
+
 
 <div id="footer"><div id="credits">2015 © all rights reserved. layout inspired by <a href="http://jimbarraud.com/manifest/">manifest</a>. <br>
 best viewed over the <a href="http://goo.gl/bIWJw">wall</a>. &nbsp;&nbsp;&nbsp;<a href="/log.html">sitelog</a>|&nbsp;<a href="/archive.html">archive</a>|&nbsp;<a href="/about.html">about</a></div></div>
